# pyhvr

./: AGENTS.md  README.md  pyproject.toml
src/pyhvr/: __init__.py  client.py  exceptions.py
src/pyhvr/api/: activate.py  agent.py  alerts.py  controls.py  definition.py  encryption.py  events.py  file_browse.py  hubs.py  hubserver.py  jobs.py  licenses.py  logs.py  metering.py  misc.py  query.py  repos.py  stats.py  table_adapt.py  users.py
tests/: test_client.py  test_definition.py  test_exceptions.py  test_interfaces.py
